[gd_scene load_steps=3 format=3 uid="uid://dtest_ai_scene"]

[ext_resource type="Script" path="res://scripts/systems/unit_spawner.gd" id="1_spawner"]
[ext_resource type="Script" path="res://scenes/test/ai_test_controller.gd" id="2_controller"]

[node name="AITest" type="Node2D"]
script = ExtResource("2_controller")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(640, 360)
zoom = Vector2(1.5, 1.5)

[node name="Background" type="ColorRect" parent="."]
offset_left = -200.0
offset_top = -200.0
offset_right = 1480.0
offset_bottom = 920.0
color = Color(0.15, 0.2, 0.15, 1)

[node name="BattleArea" type="ColorRect" parent="."]
offset_left = 100.0
offset_top = 100.0
offset_right = 1180.0
offset_bottom = 620.0
color = Color(0.2, 0.25, 0.2, 1)

[node name="UnitSpawner" type="Node2D" parent="."]
script = ExtResource("1_spawner")
spawn_area_size = Vector2(300, 200)

[node name="Units" type="Node2D" parent="."]

[node name="PlayerUnits" type="Node2D" parent="Units"]

[node name="EnemyUnits" type="Node2D" parent="Units"]

[node name="UI" type="CanvasLayer" parent="."]

[node name="HUD" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="InfoPanel" type="Panel" parent="UI/HUD"]
offset_left = 10.0
offset_top = 10.0
offset_right = 250.0
offset_bottom = 150.0

[node name="InfoLabel" type="Label" parent="UI/HUD/InfoPanel"]
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 230.0
offset_bottom = 130.0
text = "Gocha-Kyara AI Test

Controls:
Arrow Left/Right: Switch unit
Arrow Up/Down: Switch squad
WASD: Move controlled unit
Mouse Right: Move to position"

[node name="StatusPanel" type="Panel" parent="UI/HUD"]
offset_left = 10.0
offset_top = 160.0
offset_right = 250.0
offset_bottom = 350.0

[node name="StatusLabel" type="Label" parent="UI/HUD/StatusPanel"]
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 230.0
offset_bottom = 180.0
text = "Status:
Loading..."

[node name="GameStateLabel" type="Label" parent="UI/HUD"]
layout_mode = 0
offset_left = 10.0
offset_top = 360.0
offset_right = 250.0
offset_bottom = 400.0
text = "Game State: MENU"
